finetuning Prithvi with new flood dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 2019Mississipi/
 202410Valencia/
 chips/
+201905Mississipi/201905Mississipi_AF.tif
+201905Mississipi/201905Mississipi_AF.tif.aux.xml
+201905Mississipi/201905Mississipi_AF.tif.ovr
+201905Mississipi/201905Mississipi_BF.tif
+201905Mississipi/201905Mississipi_BF.tif.aux.xml
+201905Mississipi/201905Mississipi_BF.tif.ovr
+201905Mississipi/201905Mississipi_FM.tif
+201905Mississipi/201905Mississipi_FM.tif.aux.xml
+201905Mississipi/201905Mississipi_FM.tif.ovr
+201905Mississipi/201905Mississipi_PWL.tif
+201905Mississipi/201905Mississipi_PWL.tif.aux.xml
+201905Mississipi/201905Mississipi_PWL.tif.ovr
+201905Mississipi/201905Mississipi_PWL.tif.vat.cpg
+201905Mississipi/201905Mississipi_PWL.tif.vat.dbf
